AWSClientRuntime/Tests/Protocols/RestXML/Models/Errors/ComplexXMLNestedErrorData+Codable.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//
        
// Code generated by smithy-swift-codegen. DO NOT EDIT!

import ClientRuntime

extension ComplexXMLNestedErrorData: Codable {
    enum CodingKeys: String, CodingKey {
        case foo = "Foo"
    }

    public func encode(to encoder: Encoder) throws {
        var container = encoder.container(keyedBy: Key.self)
        if let foo = foo {
            try container.encode(foo, forKey: Key("foo"))
        }
    }

    public init (from decoder: Decoder) throws {
        let containerValues = try decoder.container(keyedBy: CodingKeys.self)
        let fooDecoded = try containerValues.decodeIfPresent(String.self, forKey: .foo)
        foo = fooDecoded
    }
}
